Fix long lines not wrapping
Add a specific word wrap to grid columns to make sure a long word doesn’t break out

--- a/blocks/layout-grid/front.scss
+++ b/blocks/layout-grid/front.scss
@@ -100,4 +100,10 @@
 			}
 		}
 	}
+
+	// Ensure long lines wrap in themes that don't already enforce this
+	.wp-block-jetpack-layout-grid-column * {
+		word-break: break-word;
+		word-wrap: break-word;
+	}
 }
